welcome.lessons.welcome.array.basics.Array1.scala.error
withoutDoubles:3: error: reassignment to val
    die1 = (die1%6)+1}
         ^